--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -16,7 +16,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-  data-source-interaction:
+  smartggrid-ms:
     build: .
     image: gridvo/smartgrid-ms:dev
     container_name: smartgrid-ms
