--- a/k8s/dev/smartgrid_ms-deployment.yaml
+++ b/k8s/dev/smartgrid_ms-deployment.yaml
@@ -7,11 +7,11 @@ spec:
   template:
     metadata:
       labels:
-        app: smartgrid-ms
+        name: smartgrid-ms
     spec:
       containers:
       - name: smartgrid-ms
-        image: 10.0.2.62:5000/gridvo/smartgrid-ms:dev
+        image: 10.0.3.31:5000/gridvo/smartgrid-ms:dev
         imagePullPolicy: Always
         ports:
         - containerPort: 3001
