--- a/k8s/dev/smartgrid_ms-service.yaml
+++ b/k8s/dev/smartgrid_ms-service.yaml
@@ -4,9 +4,9 @@ metadata:
   name: smartgrid-ms
 spec:
   selector:
-    app: smartgrid-ms
+    name: smartgrid-ms
   type: NodePort
   ports:
      - port: 80
        targetPort: 3001
-       nodePort: 8010
+       nodePort: 31012
