--- a/k8s/dev/smartgrid_ms-service.yaml
+++ b/k8s/dev/smartgrid_ms-service.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    name: smartgrid-ms
   name: smartgrid-ms
+  namespace: gridvo
 spec:
   selector:
     name: smartgrid-ms
